update tasks and launch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,32 @@
 {
     "configurations": [
+
+        {
+            "name": "(gdb) Build Run PIO",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "C/C++: gcc build active PIO file",
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
         
         {
             "name": "C/C++: gcc build and debug active file",
